# Logger

./: .gitignore  CMakeLists.txt  README.md  compile.bat  main.c
api/: logger.h
inc/: Logger_priv.h
src/: CMakeLists.txt  logger.c
test/: CMakeLists.txt  Logger_test.cpp
